terminal: set "LOGIN_SHELL=1" for bash only
GitOrigin-RevId: 7f23cc29d44b9a1d7e74480da58acbf7bb7a43d5